refactor: remove redundant admin me endpoint
